website/translated_docs/de/version-13.0/cues/copying-moving-linking-and-deleting.md
---
id: version-13.0-copying-moving-linking-and-deleting
title: Copying, Moving, Linking and Deleting a Cue
sidebar_label: Copying, Moving, Linking and Deleting
original_id: copying-moving-linking-and-deleting
---

Kopieren oder verschieben eines Cues
------------------------------------

Mittels der Tasten \<Copy\> und \<Move\> (bzw. \<Copy/Move/Link\>) lässt
sich eine **Kopie** eines Cues anfertigen, ein Cue auf einen anderen
Speicherplatz **verschieben**, oder ein Speicherplatz als **Verknüpfung** zu
einem bestehenden Cue anlegen. Kopieren, Verschieben und Verknüpfen
lässt sich auch für mehrere Speicherplätze (nicht nur Cues, sondern auch
[Chaser](../chases.md) or [Cuelisten](../cue-lists.md)) in einem Arbeitsgang
erreichen.

Verschieben ist sinnvoll, um das Pult 'aufzuräumen'. Verknüpfungen
bieten sich an, wenn ein Cue aus Ablaufgründen auf mehreren Seiten
erscheinen soll; Verknüpfungen enthalten die gleichen Informationen wie
der originale Cue, können aber individuelle [Zeiten](cue-timing.md) und [Optionen](playback-options.md) zugewiesen bekommen.

1. Drücken Sie die Taste \<Copy\> bzw. \<Copy/Move/Link\>.

2. Wählen Sie \[Copy\](Kopieren), \[Move\](Verschieben) oder
\[Link\](Verknüpfen). Wiederholtes Betätigen der Taste wechselt ebenfalls 
durch diese Optionen. Manche Pulte haben eine Taste \<Move\>, mit der man 
direkt zum Verschieben gelangt.

3. Drücken Sie die **Swop-Taste** des Cues, den Sie bearbeiten möchten.
Sie können eine Reihe von Cues auswählen, indem Sie die Taste der ersten
gedrückt halten und die Taste der letzten dazu betätigen. Ebenso können
mit \<Thro\> und \<And\> mehrere Cues auf einmal ausgewählt werden (ggf.
\<And\> gedrückt halten).

4. Drücken Sie eine unbelegte **Swop-Taste**, zu der der Cue
kopiert/bewegt/verknüpft werden soll.

---

-   Die Taste \<Menu Latch\> fixiert das Menü 'Copy/Move/Link', so dass
    man bei wiederholtem Kopieren/Verschieben die Taste \<Copy\> nicht
    wiederholt betätigen muss. Zum Freigeben des Menüs drücken Sie
    nochmals \<Menu Latch\>, zum Verlassen drücken Sie \<Exit\>.

-   \[Retain Layout\](Layout erhalten) oder \[Bunch
    Up\](Zusammen­fassen) werden verwendet beim Kopieren einer Gruppe
    von Cues, die auch unbelegte Speicherplätze enthält: diese lassen
    sich entweder weiter als unbelegt behalten, oder die belegten
    Speicherplätze werden aufeinanderfolgend zusammengefasst.

-   Im Modus **Copy** (Kopieren) kann die Option \[Copy Legends\]
    (Bezeichnungen kopieren) geändert werden in \[Don't copy legends\]
    (Bezeichnungen nicht kopieren), so dass die kopierten Cues
    Standardbezeichner bekommen.

-   Im Modus 'Move' (Verschieben) dient die Option \[Swap Items if
    Required\] (Tausch wenn erforderlich) dazu, bestehende Cues, die dem
    Verschiebe-Vorgang im Wege wären, automatisch zu verschieben. Dies
    bietet sich insbesondere beim ‚Aufräumen' nahezu voller Seiten an.

Einen Cue löschen
-----------------

Um einen Cue zu löschen:

1. Drücken Sie die \<Delete\>-Taste.

2. Betätigen Sie die **Swop-Taste** des zu löschenden Cues.

3. Drücken Sie die **Swop-Taste** zur Bestätigung nochmals (oder
bestätigen Sie mit \<Enter\>).

---

-   Statt einen Cue zu löschen, kann man diesen auch mit der Option
    \[Unassign\] im Delete-Menü 'unbelegen' (unassign). Damit wird der
    Cue von der jeweiligen Schaltfläche/Fader/Taste entfernt, bleibt
    aber im [Show-Verzeichnis](../titan-basics/show-library.md) erhalten und kann später wieder verwendet werden.

-   Verwenden Sie die Taste \<Menu Latch\>, um den Löschmodus aktiv zu
    lassen, so können Sie mittels Schritt 2 und 3 weitere Cues löschen,
    ohne jeweils die \<Delete\>-Taste betätigen zu müssen. Zum Freigeben
    des Menüs drücken Sie nochmals \<Latch Menu\>, zum Verlassen drücken
    Sie \<Exit\>.